--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 
     <main>
       <section class="video-grid">
+        <a href="https://www.instagram.com/">Link</a>
         <div class="video-preview">
             <div class="thumbnail-row">
               <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
